--- a/stable-rc/linux-aufs-git/PKGBUILD
+++ b/stable-rc/linux-aufs-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
 _major=5.7
 _srcname=linux-stable-rc
-pkgver=5.7.10.r199.g3d6db9c81440
+pkgver=5.7.12.r121.g759db541b69b
 pkgrel=1
 pkgdesc='Linux AUFS'
 arch=('x86_64')
@@ -69,10 +69,9 @@ _gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
         "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
-        "${_lucjanpath}/arch-updates-v11-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-updates-v11-sep/0002-PCI-EDR-Log-only-ACPI_NOTIFY_DISCONNECT_RECOVER-even.patch"
-        "${_lucjanpath}/arch-updates-v11-sep/0003-virt-vbox-Add-support-for-the-new-VBG_IOCTL_ACQUIRE_.patch"
-        "${_lucjanpath}/arch-updates-v11-sep/0004-drm-amd-display-Clear-dm_state-for-fast-updates.patch"
+        "${_lucjanpath}/arch-updates-v12-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-updates-v12-sep/0002-PCI-EDR-Log-only-ACPI_NOTIFY_DISCONNECT_RECOVER-even.patch"
+        "${_lucjanpath}/arch-updates-v12-sep/0003-virt-vbox-Add-support-for-the-new-VBG_IOCTL_ACQUIRE_.patch"
         'sphinx-workaround.patch'
          # the main kernel config files
         'config')
@@ -327,9 +326,8 @@ done
 sha512sums=('SKIP'
             'd383ff21c59aaccffbf9fac412495383118612ddbe6bf06691e2038d2b886754d2ba85b29f970f548103e1d0be519d114ba4641f29d329b604c7456db36ff193'
             'ef8c9706da28eeaf98028609bf8ef6f558f7701f985c5925be6388dad0fbe8654fc15a803cd14f99ff89c026d471bbddbdff378b18db3f05f3d952faf943af72'
-            'b931b5bb841bb15933145dbec1cca501495daba41d4630baf12fea834192aa08cb2c3810e5082490163acabc0f7a5456f2f1ecea0941bbe6c9bb53378745f5e4'
-            'a5a1c8bf77a15ac2f1b7af6b35c2883e92cc44b901e0f34680b6af45692164096e37b1d39600698d5093daa84d95ca14605c07b1f0f13a66cf64c41445f9e67f'
-            'f8bc93386fcbe006fad3995c52db0eb697f9ce0be790715c3c72cb3e93c13624e8024f8e271621040d69ca0b9b9d5379c74fb0ad5f4d86b1ccf08fe600e09219'
-            '2773d7e9be5ac7fc3c69588481b77ed4f6b880761b317746d6ae7dd02da443b503aafd9d23eefdb906a12d1c36b8bfdc49a6e350b814ec85eaaa2564ccd66994'
+            'b69b58856a2bdd62ea1a4ea7ce2932c6ed9ca9ec0b7796a13d4e051bb6c1d85bb576d651a7ae5b515e1226b524d4446c8d9c8f1d1c4b58ad982ae15d8cd7acbf'
+            'e8ce50a564c8412f3225c06eac4778f09a663c9ba05b5043916675934ab74a769cc91ef3f4162b73aa6854fceabb8e4d9c3143ebe105ce725fbac26df4044862'
+            'b9fd69758b1a5bdcf69d2b8d85d3acfaf20fe7e842e734ae03f4ab82a26743301336193db87b7e801636e487faceaf6eadc3bb5cecbb975d9a3afd9f9aa1851c'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
             '6a8191b6ead182c9409f13cc3d297829ff6c2f982cb50aa7f0ca5a24e59030434b5de5d8f945abc09d4ed88df2510432481fd791d5056a0289c651b764e4e4bd')
